--- a/reviews/test/fixtures/reviews.yml
+++ b/reviews/test/fixtures/reviews.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  store_id: MyString
+  book_id: MyString
+  content: MyString
 
 two:
-  name: MyString
-  store_id: MyString
+  book_id: MyString
+  content: MyString
