--- a/reviews/Gemfile
+++ b/reviews/Gemfile
@@ -10,6 +10,7 @@ gem 'sqlite3', '~> 1.4'
 # Use Puma as the app server
 gem 'mongoid', '~> 7.0.5'
 gem 'rack-cors'
+gem 'httparty', '~> 0.13.7'
 gem 'puma', '~> 4.1'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.7'
