--- a/stores/Gemfile
+++ b/stores/Gemfile
@@ -9,6 +9,7 @@ gem 'rails', '~> 6.0.3', '>= 6.0.3.4'
 gem 'sqlite3', '~> 1.4'
 # Use Puma as the app server
 gem 'mongoid', '~> 7.0.5'
+gem 'httparty', '~> 0.13.7'
 gem 'rack-cors'
 gem 'puma', '~> 4.1'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
