--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,43 @@
-version: "1"
+version: "3.8"
 services:
   db:
     image: mongo:latest
+    restart: always
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
-    environment:
-      POSTGRES_PASSWORD: password
+    # environment:
+    #   MONGO_INITDB_ROOT_USERNAME: root
+    #   MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+      - "27777:27017"
   books:
     image: books:dev
-    build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    build: ./books
+    # command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/books
     ports:
-      - "3000:3000"
+      - "5001:3000"
     depends_on:
       - db
   stores:
     image: stores:dev
-    build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    build: ./stores
+    # command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/stores
     ports:
-      - "3000:3000"
+      - "5002:3000"
     depends_on:
       - db
   reviews:
     image: reviews:dev
-    build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    build: ./reviews
+    # command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/reviews
     ports:
-      - "3000:3000"
+      - "5003:3000"
     depends_on:
       - db
         
